--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Злучы Пяць Кропак</string>
+
+
     
 	<string name="how_to_title">Як граць</string>
 	<string name="how_to_text">\tЗлучыце першымі пяць кропак у прамую лінію па гарызанталі, па вертыкалі або па дыяганалі. Андроід грае сінімі кропкамі, Вы чырвонымі. Чырвоныя і сінія кропкі ставяцца па чарзе на перакрыжаванні ліній. Першы рух Ваш.\n\n\tЦягніце па экране, каб перамясціць сетку.\n\tМаштабуйце экран, каб павялічыць ці паменшыць памер сеткі.\n\tУжыйце меню, каб перазапусціць гульню, скасаваць апошні рух, паглядзець вынікі гульні, або як граць.\n\tЦіскайце кнопку \"Шукаць\", каб схаваць / паказаць стрэлкі вакол кропкі апошняга руха.</string>
@@ -31,7 +33,7 @@
 	<string name="scores_loading">Загрузка&#8230;</string>
 	
 	<string name="menu_single_player">Адзін гулец</string>
-	<string name="menu_bt_game">Гульня праз блютуз</string>
+	<string name="menu_multi_player">Мультыплэер</string>
 
 	<string name="rate_this_app">Ацаніць гэтую праграму</string>
 
