--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Junta cinco puntos</string>
+
+
     
 	<string name="how_to_title">Cómo Jugar</string>
 	<string name="how_to_text">\tSea el primero en juntar cinco puntos en la forma de una línea recta de modo horizontal, vertical o diagonal. El Android posiciona los azules, mientras Usted los puntos rojos. A los puntos de ambos colores los meten en turno sobre las intersecciones de las líneas. Su turno es inicial.\n\n\tArrastre Ud. la pantalla para mover el campo de juego.\n\tEstire Ud. la pantalla para aumentar o disminuir el tamaño de las células.\n\tUtilice Ud. el menú para reiniciar el juego, deshacer el último movimiento, mirar las cuentas y la información sobre el juego.\n\tAprete Ud. el botón \"Buscar\" para esconder/mostrar las flechas alrededor del punto del movimiento último.</string>
@@ -30,8 +32,8 @@
 	
 	<string name="scores_loading">Cargando&#8230;</string>
 	
-	<string name="menu_single_player">Juego solitario</string>
-	<string name="menu_bt_game">Juego Bluetooth</string>
+	<string name="menu_single_player">Solo jugador</string>
+	<string name="menu_multi_player">Multijugador</string>
 
 	<string name="rate_this_app">Valorar esta aplicación</string>
 
