--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">З\'єднай П\'ять Точок</string>
+
+
     
 	<string name="how_to_title">Як грати</string>
 	<string name="how_to_text">\tЗ\'єднайте першими п\'ять точок по прямій горизонтально, вертикально чи по діагоналі. Андроїд грає синіми точками, ви граєте червоними точками. Червоні і сині точки розміщуються поперемінно на перетині ліній сітки. Перший крок за Вами.\n\n\tПеретягніть екран, щоб перемістити сітку.\n\tРозтягніть екран, щоб збільшити або зменшити розмір сітки.\n\tВикористовуйте меню, щоб перезапустити гру, скасувати останній хід, подивитися досягнення в іграх або подивитися, як грати.\n\tНатисніть кнопку \"Пошук\", щоб приховати / показати стрілки, що показують останній хід точкою.</string>
@@ -31,7 +33,7 @@
 	<string name="scores_loading">Завантаження&#8230;</string>
 	
 	<string name="menu_single_player">Один гравець</string>
-	<string name="menu_bt_game">Грати через Блутуз</string>
+	<string name="menu_multi_player">Мультиплеер</string>
 
 	<string name="rate_this_app">Оцінити цю програму</string>
 
