--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -1,6 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Соедини пять точек</string>
+
+
     
 	<string name="how_to_title">Как играть</string>
 	<string name="how_to_text">\tБудьте первыми соединив пять точек в прямую линию горизонтально, вертикально или диагонально. Андроид играет синими точками, Вы играете красными точками. Красные и синие точки ставятся по очереди на пересечениях линий. Первый ход Ваш.\n\n\tПеретяните экран, чтобы передвинуть игровое поле.\n\tРастяните экран, чтобы увеличить или уменьшить размер клеток.\n\tИспользуйте меню, чтобы начать новую игру, отменить последний ход, посмотреть очки или информацию как играть.\n\tНажмите на кнопку \"Поиск\", чтобы спрятать/показать стрелочки вокруг точки последнего хода.</string>
@@ -30,8 +32,8 @@
 	
 	<string name="scores_loading">Загрузка&#8230;</string>
 
-	<string name="menu_single_player">Одиночная игра</string>
-	<string name="menu_bt_game">Bluetooth игра</string>
+	<string name="menu_single_player">Один игрок</string>
+	<string name="menu_multi_player">Мультиплеер</string>
 
 	<string name="rate_this_app">Оценить приложение</string>
 
