--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -34,6 +34,7 @@
 	
 	<string name="menu_single_player">Solo jugador</string>
 	<string name="menu_multi_player">Multijugador</string>
+	<string name="menu_local_network">Red de área local</string>
 
 	<string name="rate_this_app">Valorar esta aplicación</string>
 
@@ -50,6 +51,7 @@
     <string name="bluetooth_no_devices_found">"No hay dispositivos Bluetooth cercanos."</string>
     <string name="device_picker">"Seleccionar dispositivo Bluetooth"</string>
     <string name="bluetooth_connection_dialog_text">"¿Quieres conectarte a %1$s?"</string>
+    <string name="bluetooth_settings">"Bluetooth"</string>
     <string name="bluetooth_connecting_error_message">"No se ha podido establecer conexión con %1$s."</string>
     <string name="bluetooth_search_for_devices">"Actualizar"</string>
     <string name="bluetooth_preference_paired_devices">"Dispositivos sincronizados"</string>
