--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -34,6 +34,7 @@
 	
 	<string name="menu_single_player">Giocatore Singolo</string>
 	<string name="menu_multi_player">Multiplayer</string>
+	<string name="menu_local_network">Rete Locale</string>
 
 	<string name="rate_this_app">Valuta questa app</string>
 
@@ -50,6 +51,7 @@
     <string name="bluetooth_no_devices_found">"Nessun dispositivo Bluetooth in vicinanze."</string>
     <string name="device_picker">"Scegli il dispositivo Bluetooth"</string>
     <string name="bluetooth_connection_dialog_text">"Vuoi connetterti a \"%1$s\"?"</string>
+	<string name="bluetooth_settings">"Bluetooth"</string>
     <string name="bluetooth_connecting_error_message">"Impossibile collegarsi a \"%1$s\"."</string>
     <string name="bluetooth_search_for_devices">"Aggiorna"</string>
     <string name="bluetooth_preference_paired_devices">"Dispositivi accoppiati"</string>
