--- a/app/src/main/res/values-pl/strings.xml
+++ b/app/src/main/res/values-pl/strings.xml
@@ -34,6 +34,7 @@
 	
 	<string name="menu_single_player">Jeden Gracz</string>
 	<string name="menu_multi_player">Multiplayer</string>
+	<string name="menu_local_network">Sieć Lokalna</string>
 
 	<string name="rate_this_app">Oceń tę aplikację</string>
 
@@ -50,6 +51,7 @@
     <string name="bluetooth_no_devices_found">"Brak urządzeń Bluetooth w pobliżu"</string>
     <string name="device_picker">"Wybierz urządzenie Bluetooth"</string>
     <string name="bluetooth_connection_dialog_text">"Czy chcesz nawiązać połączenie z urządzeniem „%1$s”?"</string>
+	<string name="bluetooth_settings">"Bluetooth"</string>
     <string name="bluetooth_connecting_error_message">"Nie udało się nawiązać połączenia z „%1$s”."</string>
     <string name="bluetooth_search_for_devices">"Odśwież"</string>
     <string name="bluetooth_preference_paired_devices">"Powiązane urządzenia"</string>
