--- a/app/src/main/res/values-it/strings.xml
+++ b/app/src/main/res/values-it/strings.xml
@@ -40,6 +40,7 @@
 
     <string name="yes">"Sì"</string>
     <string name="no">"No"</string>
+	<string name="create">"Crea"</string>
 
     <string name="bluetooth_not_discoverable">"Rendi rilevabile il dispositivo"</string>
     <string name="bluetooth_is_discoverable">"Visibile a tutti dispositivi Bluetooth vicini (%1$s)"</string>
@@ -51,6 +52,7 @@
     <string name="bluetooth_no_devices_found">"Nessun dispositivo Bluetooth in vicinanze."</string>
     <string name="device_picker">"Scegli il dispositivo Bluetooth"</string>
     <string name="bluetooth_connection_dialog_text">"Vuoi connetterti a \"%1$s\"?"</string>
+    <string name="cancel">"Annulla"</string>
 	<string name="bluetooth_settings">"Bluetooth"</string>
     <string name="bluetooth_connecting_error_message">"Impossibile collegarsi a \"%1$s\"."</string>
     <string name="bluetooth_search_for_devices">"Aggiorna"</string>
