--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -26,7 +26,7 @@
 	<string name="end_publish">Апублікаваць</string>
 	<string name="prompt_text">Впішыце сваё імя:</string>
 	<string name="prompt_save">Захаваць</string>
-	<string name="prompt_cancel">Адмяніць</string>
+	<string name="prompt_cancel">Скасаваць</string>
 	<string name="scores_edit_profile">Рэдагаваць прафайл</string>
 	<string name="scores_update">Абнавіць</string>
 	
@@ -40,6 +40,7 @@
 
     <string name="yes">"Так"</string>
     <string name="no">"Не"</string>
+	<string name="create">"Стварыць"</string>
 
     <string name="bluetooth_not_discoverable">Зрабіць прыладу бачнай</string>
     <string name="bluetooth_is_discoverable">"Бачна для ўсіх прылад Bluetooth (%1$s)"</string>
@@ -51,6 +52,7 @@
     <string name="bluetooth_no_devices_found">"Адсутнасць прылад Bluetooth паблізу"</string>
     <string name="device_picker">"Выбраць прыладу Bluetooth"</string>
     <string name="bluetooth_connection_dialog_text">"Падключыцца да прылады „%1$s”?"</string>
+    <string name="cancel">"Скасаваць"</string>
     <string name="bluetooth_settings">"Bluetooth"</string>
     <string name="bluetooth_connecting_error_message">"Не атрымалася падключыцца да „%1$s”."</string>
     <string name="bluetooth_search_for_devices">"Абнавіць"</string>
