--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -40,6 +40,7 @@
 
     <string name="yes">"Да"</string>
     <string name="no">"Нет"</string>
+	<string name="create">"Создать"</string>
 
     <string name="bluetooth_not_discoverable">"Сделать устройство видимым"</string>
     <string name="bluetooth_is_discoverable">"Виден другим Bluetooth-устройствам: %1$s"</string>
@@ -53,6 +54,7 @@
     <string name="bluetooth_connection_dialog_text">"Подключиться к устройству \"%1$s\"?"</string>
 	<string name="bluetooth_settings">"Bluetooth"</string>
     <string name="bluetooth_connecting_error_message">"Не удалось подключиться к \"%1$s\"."</string>
+    <string name="cancel">"Отмена"</string>
     <string name="bluetooth_search_for_devices">"Обновить"</string>
     <string name="bluetooth_preference_paired_devices">"Подключенные устройства"</string>
     <string name="bluetooth_preference_found_devices">"Доступные устройства"</string>
