--- a/app/src/main/res/values-be/strings.xml
+++ b/app/src/main/res/values-be/strings.xml
@@ -6,6 +6,7 @@
 
 
 	<string name="greetings">Прывітаньне, %1$s!</string>
+	<string name="android">Андроід</string>
 	<string name="how_to_title">Як граць</string>
 	<string name="how_to_text">\tЗлучыце першымі пяць кропак у прамую лінію па гарызанталі, па вертыкалі або па дыяганалі. Андроід грае сінімі кропкамі, Вы чырвонымі. Чырвоныя і сінія кропкі ставяцца па чарзе на перакрыжаванні ліній. Першы рух Ваш.\n\n\tЦягніце па экране, каб перамясціць сетку.\n\tМаштабуйце экран, каб павялічыць ці паменшыць памер сеткі.\n\tУжыйце меню, каб перазапусціць гульню, скасаваць апошні рух, паглядзець вынікі гульні, або як граць.\n\tЦіскайце кнопку \"Шукаць\", каб схаваць / паказаць стрэлкі вакол кропкі апошняга руха.</string>
 	
