--- a/app/src/main/res/values-ru/strings.xml
+++ b/app/src/main/res/values-ru/strings.xml
@@ -6,6 +6,7 @@
 
 
 	<string name="greetings">Привет, %1$s!</string>
+	<string name="android">Андроид</string>
 	<string name="how_to_title">Как играть</string>
 	<string name="how_to_text">\tБудьте первыми соединив пять точек в прямую линию горизонтально, вертикально или диагонально. Андроид играет синими точками, Вы играете красными точками. Красные и синие точки ставятся по очереди на пересечениях линий. Первый ход Ваш.\n\n\tПеретяните экран, чтобы передвинуть игровое поле.\n\tРастяните экран, чтобы увеличить или уменьшить размер клеток.\n\tИспользуйте меню, чтобы начать новую игру, отменить последний ход, посмотреть очки или информацию как играть.\n\tНажмите на кнопку \"Поиск\", чтобы спрятать/показать стрелочки вокруг точки последнего хода.</string>
 	
