--- a/app/src/main/res/values-uk/strings.xml
+++ b/app/src/main/res/values-uk/strings.xml
@@ -6,6 +6,7 @@
 
 
 	<string name="greetings">Привіт, %1$s!</string>
+	<string name="android">Андроід</string>
 	<string name="how_to_title">Як грати</string>
 	<string name="how_to_text">\tЗ’єднайте першими п’ять точок по прямій горизонтально, вертикально чи по діагоналі. Андроїд грає синіми точками, ви граєте червоними точками. Червоні і сині точки розміщуються поперемінно на перетині ліній сітки. Перший крок за Вами.\n\n\tПеретягніть екран, щоб перемістити сітку.\n\tРозтягніть екран, щоб збільшити або зменшити розмір сітки.\n\tВикористовуйте меню, щоб перезапустити гру, скасувати останній хід, подивитися досягнення в іграх або подивитися, як грати.\n\tНатисніть кнопку \"Пошук\", щоб приховати / показати стрілки, що показують останній хід точкою.</string>
 	
